Update CandidateController.java