@@ -5,6 +5,7 @@ import com.team3.dtos.user.UserDTO;
 import com.team3.services.UserService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value; // Import thêm
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.data.domain.PageRequest;
@@ -30,7 +31,7 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.Collections; // Import thêm
 import java.util.List;
 import java.util.UUID;
 
@@ -43,6 +44,10 @@ public class CandidateController {
 
     @Autowired
     private UserService userService;
+
+    // --- SỬA 1: Inject đường dẫn từ application.properties ---
+    @Value("${file.upload-dir}")
+    private String uploadDir;
 
     @GetMapping("")
     public String candidateList(@RequestParam(required = false) String search,
@@ -67,47 +72,39 @@ public class CandidateController {
     @PostMapping("/delete/{id}")
     public String deleteCandidate(@PathVariable("id") Long candidateId, RedirectAttributes redirectAttributes) {
         String result = candidateService.deleteCandidateById(candidateId);
-
         redirectAttributes.addFlashAttribute("message", result);
-
         return "redirect:/candidates";
     }
 
     @GetMapping("/detail/{id}")
     public String candidateDetail(@PathVariable("id") Long id, Model model) {
-
         var candidateDTO = candidateService.findById(id);
-
         UserDTO userDTO = userService.findByUsername(candidateDTO.getRecruiterOwner());
         String recruiterOwnerName = userDTO.getFullName() + " (" + userDTO.getUsername() + ")";
         model.addAttribute("recruiterOwnerName", recruiterOwnerName);
-
         String cvName = candidateDTO.getCvFileName().substring(candidateDTO.getCvFileName().indexOf("_") + 1);
         model.addAttribute("cvName", cvName);
-
         model.addAttribute("candidate", candidateDTO);
-
         return "contents/candidate/candidate-detail";
     }
 
     @GetMapping("/edit/{id}")
     public String editCandidate(@PathVariable("id") Long id, Model model) {
         var candidateDTO = candidateService.findById(id);
-
         String cvName = candidateDTO.getCvFileName().substring(candidateDTO.getCvFileName().indexOf("_") + 1);
         model.addAttribute("cvName", cvName);
 
-        List<String> skillList = List.of(candidateDTO.getSkills().split(","));
+        // --- SỬA 2: Xử lý trường hợp skills là null ---
+        List<String> skillList = (candidateDTO.getSkills() != null && !candidateDTO.getSkills().isEmpty())
+                ? List.of(candidateDTO.getSkills().split(","))
+                : Collections.emptyList();
         model.addAttribute("skillList", skillList);
 
         List<UserDTO> recruiters = userService.getRecruiters();
         model.addAttribute("recruiters", recruiters);
-
         model.addAttribute("candidate", candidateDTO);
-
         return "contents/candidate/candidate-edit";
     }
-
 
     @PostMapping("/edit/{id}")
     public String editCandidate(@PathVariable("id") Long id,
@@ -118,24 +115,25 @@ public class CandidateController {
                                 Model model) {
 
         if (bindingResult.hasErrors()) {
-            if (candidateDTO.getSkills() != null) {
-                List<String> skillList = List.of(candidateDTO.getSkills().split(","));
-                model.addAttribute("skillList", skillList);
-            }
+            // --- SỬA 3: Đảm bảo dữ liệu luôn được load lại khi có lỗi validation ---
+            List<String> skillList = (candidateDTO.getSkills() != null && !candidateDTO.getSkills().isEmpty())
+                    ? List.of(candidateDTO.getSkills().split(","))
+                    : Collections.emptyList();
+            model.addAttribute("skillList", skillList);
 
-            String cvName = candidateDTO.getCvFileName().substring(candidateDTO.getCvFileName().indexOf("_") + 1);
-            model.addAttribute("cvName", cvName);
+            if (candidateDTO.getCvFileName() != null && !candidateDTO.getCvFileName().isEmpty()) {
+                String cvName = candidateDTO.getCvFileName().substring(candidateDTO.getCvFileName().indexOf("_") + 1);
+                model.addAttribute("cvName", cvName);
+            }
 
             List<UserDTO> recruiters = userService.getRecruiters();
             model.addAttribute("recruiters", recruiters);
-
             return "contents/candidate/candidate-edit";
         }
 
         if (cvFile != null && !cvFile.isEmpty()) {
             try {
-                String uploadDir = "D:\\HN24_FRF_FJW_02\\MockProject\\Output\\";
-
+                // Sử dụng biến uploadDir đã inject
                 File directory = new File(uploadDir);
                 if (!directory.exists()) {
                     directory.mkdirs();
@@ -145,45 +143,39 @@ public class CandidateController {
                 String filePath = uploadDir + fileName;
                 File destFile = new File(filePath);
                 cvFile.transferTo(destFile);
-
                 candidateDTO.setCvFileName(fileName);
 
             } catch (IOException e) {
                 e.printStackTrace();
                 bindingResult.rejectValue("cvFileName", "error.candidate", "Error occurred while uploading the CV file.");
 
-                String cvName = candidateDTO.getCvFileName().substring(candidateDTO.getCvFileName().indexOf("_") + 1);
-                model.addAttribute("cvName", cvName);
-
+                // --- SỬA 4: Load lại đầy đủ dữ liệu khi có lỗi IO ---
                 List<UserDTO> recruiters = userService.getRecruiters();
                 model.addAttribute("recruiters", recruiters);
-
+                if (candidateDTO.getCvFileName() != null && !candidateDTO.getCvFileName().isEmpty()) {
+                    String cvName = candidateDTO.getCvFileName().substring(candidateDTO.getCvFileName().indexOf("_") + 1);
+                    model.addAttribute("cvName", cvName);
+                }
                 return "contents/candidate/candidate-edit";
             }
         }
 
         CandidateDTO updateCandidateDTO = candidateService.updateCandidate(candidateDTO);
-
         if (updateCandidateDTO == null) {
             redirectAttributes.addFlashAttribute("message", "Update candidate failed");
             return "redirect:/candidates/edit/" + id;
         }
 
         redirectAttributes.addFlashAttribute("message", "Update candidate successfully");
-
         return "redirect:/candidates/detail/" + id;
     }
 
     @GetMapping("/create")
     public String createCandidate(Model model) {
-
         CandidateDTO candidateDTO = new CandidateDTO();
-
         List<UserDTO> recruiters = userService.getRecruiters();
         model.addAttribute("recruiters", recruiters);
-
         model.addAttribute("candidate", candidateDTO);
-
         return "contents/candidate/candidate-create";
     }
 
@@ -195,14 +187,8 @@ public class CandidateController {
                                   Model model) {
 
         if (bindingResult.hasErrors()) {
-            if (candidateDTO.getSkills() != null) {
-                List<String> skillList = List.of(candidateDTO.getSkills().split(","));
-                model.addAttribute("skillList", skillList);
-            }
-
             List<UserDTO> recruiters = userService.getRecruiters();
             model.addAttribute("recruiters", recruiters);
-
             return "contents/candidate/candidate-create";
         }
 
@@ -214,8 +200,7 @@ public class CandidateController {
         }
 
         try {
-            String uploadDir = "D:\\HN24_FRF_FJW_02\\MockProject\\Output\\";
-
+            // Sử dụng biến uploadDir đã inject
             File directory = new File(uploadDir);
             if (!directory.exists()) {
                 directory.mkdirs();
@@ -225,7 +210,6 @@ public class CandidateController {
             String filePath = uploadDir + fileName;
             File destFile = new File(filePath);
             cvFile.transferTo(destFile);
-
             candidateDTO.setCvFileName(fileName);
 
         } catch (IOException e) {
@@ -237,33 +221,27 @@ public class CandidateController {
         }
 
         CandidateDTO savedCandidateDTO = candidateService.save(candidateDTO);
-
         if (savedCandidateDTO == null) {
             redirectAttributes.addFlashAttribute("message", "Create candidate failed");
             return "redirect:/candidates/create";
         }
 
         redirectAttributes.addFlashAttribute("message", "Create candidate successfully");
-
         return "redirect:/candidates";
     }
 
     @GetMapping("/downloadCv")
     public ResponseEntity<Resource> downloadCv(@RequestParam("candidateId") Long candidateId) {
         CandidateDTO candidateDTO = candidateService.findById(candidateId);
-
         if (candidateDTO.getCvFileName() == null || candidateDTO.getCvFileName().isEmpty()) {
             return ResponseEntity.notFound().build();
         }
 
-        String uploadDir = "D:\\HN24_FRF_FJW_02\\MockProject\\Output\\";
-
+        // Sử dụng biến uploadDir đã inject
         Path filePath = Paths.get(uploadDir + candidateDTO.getCvFileName());
-        Resource resource = null;
-
+        Resource resource;
         try {
             resource = new UrlResource(filePath.toUri());
-
             if (!resource.exists() || !resource.isReadable()) {
                 return ResponseEntity.notFound().build();
             }
